[tool.poetry]
name = "tegaki-qr-helper"
version = "0.1.0"
description = ""
authors = ["kk-shinoda <koki.snd6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "10.2.0"
numpy = "1.26.4"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
